update opening docs
